--- a/KRYPTON.ipynb
+++ b/KRYPTON.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import urllib\n",
     "import smtplib\n",
     "import datetime\n",
+    "import requests\n",
     "import playsound\n",
     "import wikipedia\n",
     "import subprocess\n",
@@ -20,18 +21,19 @@
     "import wolframalpha as wa\n",
     "from WINDOWS_SEARCH import *\n",
     "import mysql.connector as ms\n",
+    "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
     "import speech_recognition as sr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = pt.init()\n",
-    "setup = ms.connect(host='localhost', user='root', passwd='Piyush24@2002', database='KAVYA')\n",
+    "setup = ms.connect(host='localhost', user='PAARTH', passwd='Piyush24@2002', database='KRYPTON')\n",
     "c = setup.cursor()\n",
     "app_id = \"TYAY5W-RP68QXQ496\"\n",
     "client = wa.Client(app_id)\n",
@@ -40,9 +42,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Voice: Microsoft David Desktop - English (United States)\n",
+      "Voice: Microsoft James - English (Australia)\n",
+      "Voice: Microsoft Linda - English (Canada)\n",
+      "Voice: Microsoft Richard - English (Canada)\n",
+      "Voice: Microsoft George - English (United Kingdom)\n",
+      "Voice: Microsoft Hazel - English (United Kingdom)\n",
+      "Voice: Microsoft Susan - English (United Kingdom)\n",
+      "Voice: Microsoft Sean - English (Ireland)\n",
+      "Voice: Microsoft Heera - English (India)\n",
+      "Voice: Microsoft Ravi - English (India)\n",
+      "Voice: Microsoft David - English (United States)\n",
+      "Voice: Microsoft Mark - English (United States)\n",
+      "Voice: Microsoft Zira - English (United States)\n",
+      "Voice: Microsoft Hazel Desktop - English (Great Britain)\n",
+      "Voice: Microsoft Catherine - English (Australia)\n",
+      "Voice: Microsoft Zira Desktop - English (United States)\n"
+     ]
+    }
+   ],
    "source": [
     "voices = engine.getProperty(\"voices\")\n",
     "for i, voice in enumerate(voices):\n",
@@ -51,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,11 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def help1():\n",
     "    say('How I can help you?')\n",
     "    query = user().lower()\n",
@@ -286,64 +310,44 @@
     "            say(\"Exiting\")\n",
     "            break\n",
     "    say(\"File had been save successfully\")\n",
-    "def search_web(input): \n",
     "\n",
-    "\tdriver = webdriver.Firefox() \n",
-    "\tdriver.implicitly_wait(1) \n",
-    "\tdriver.maximize_window() \n",
+    "def wiki(input):\n",
+    "    say(wikipedia.summary(input,sentences=2))\n",
     "\n",
-    "\tif 'youtube' in input.lower(): \n",
-    "\n",
-    "\t\tsay(\"Opening in youtube\") \n",
-    "\t\tindx = input.lower().split().index('youtube') \n",
-    "\t\tquery = input.split()[indx + 1:] \n",
-    "\t\tdriver.get(\"http://www.youtube.com/results?search_query =\" + '+'.join(query)) \n",
-    "\t\treturn\n",
-    "\n",
-    "\telif 'wikipedia' in input.lower(): \n",
-    "\n",
-    "#\t\tsay(\"Opening Wikipedia\") \n",
-    "\t\twiki(input)\n",
-    "\t\t'''indx = input.lower().split().index('wikipedia') \n",
-    "\t\tquery = input.split()[indx + 1:] \n",
-    "\t\tdriver.get(\"https://en.wikipedia.org/wiki/\" + '_'.join(query)) '''\n",
-    "\t\treturn\n",
-    "\n",
-    "\telse: \n",
-    "\n",
-    "\t\tif 'google' in input: \n",
-    "\n",
-    "\t\t\tindx = input.lower().split().index('google') \n",
-    "\t\t\tquery = input.split()[indx + 1:] \n",
-    "\t\t\tdriver.get(\"https://www.google.com/search?q =\" + '+'.join(query)) \n",
-    "\n",
-    "\t\telif 'search' in input: \n",
-    "\n",
-    "\t\t\tindx = input.lower().split().index('google') \n",
-    "\t\t\tquery = input.split()[indx + 1:] \n",
-    "\t\t\tdriver.get(\"https://www.google.com/search?q =\" + '+'.join(query)) \n",
-    "\n",
-    "\t\telse: \n",
-    "\n",
-    "\t\t\tdriver.get(\"https://www.google.com/search?q =\" + '+'.join(input.split())) \n",
-    "\n",
-    "\t\treturn\n",
-    "def web(query):\n",
-    "    if 'google' in query:\n",
-    "        webbrowser.open('https://www.google.com/')\n",
-    "    elif 'youtube' in query:\n",
-    "        webbrowser.open('https://www.youtube.com/')\n",
-    "\n",
-    "    elif 'facebook' in query:\n",
-    "        webbrowser.open('https://www.facebook.com/')\n",
-    "\n",
-    "    elif 'twitter' in query:\n",
-    "        webbrowser.open('https://twitter.com/')\n",
-    "\n",
+    "def search_and_open(query, num_results=5):\n",
+    "    search_url = f\"https://www.google.com/search?q={query.replace(' ', '+')}\"\n",
+    "    response = requests.get(search_url)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "        links = soup.find_all('a')\n",
+    "        for i, link in enumerate(links):\n",
+    "            if i >= num_results:\n",
+    "                break\n",
+    "            href = link.get('href')\n",
+    "            if href.startswith('/url?q='):\n",
+    "                url = href[len('/url?q='):].split('&')[0]\n",
+    "                print(f\"Opening result {i + 1}: {url}\")\n",
+    "                webbrowser.open(url)\n",
     "    else:\n",
-    "        say(\"I am directing you to the browser. Please enter your app name there or tell app name to my friend by clicking on the microphone. She will further guide you.\")\n",
-    "        dir11 = \"C:\\\\Program Files (x86)\\\\Microsoft\\\\Edge\\\\Application\\\\msedge.exe\"\n",
-    "        os.startfile(dir11)\n",
+    "        print(\"Failed to perform the search.\")\n",
+    "  \n",
+    "def search_web(input):\n",
+    "    driver = webdriver.Firefox() \n",
+    "    driver.implicitly_wait(1)\n",
+    "    driver.maximize_window() \n",
+    "    if 'youtube' in input.lower():\n",
+    "        say(\"Opening in youtube\")\n",
+    "        indx = input.lower().split().index('youtube')\n",
+    "        query = input.split()[indx + 1:] \n",
+    "        driver.get(\"http://www.youtube.com/results?search_query =\" + '+'.join(query)) \n",
+    "        return\n",
+    "    elif 'wikipedia' in input.lower(): \n",
+    "        wiki(input)\n",
+    "        return\n",
+    "    else:\n",
+    "        search_and_open(query)\n",
+    "        return\n",
     "\n",
     "def apps(query):\n",
     "    app=['chrome', 'firefox', 'msedge', 'safari', 'opera', 'brave', 'vivaldi', 'duckduckgo']\n",
@@ -403,9 +407,6 @@
     "        else:\n",
     "            apps()\n",
     "\n",
-    "def wiki(input):\n",
-    "#\tif summary in input:\n",
-    "\tsay(wikipedia.summary(input,sentences=2))\n",
     "def sendEmail(to, content):\n",
     "    server = smtplib.SMTP('smtp.gmail.com', 587)\n",
     "    server.ehlo()\n",
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,8 +444,21 @@
     "                    GK(query)\n",
     "                except:\n",
     "                    say(\"Sorry Geni. Can you rephrase it?\")\n",
+    "        elif \"who made you\" in input or \"created you\" in input: \n",
+    "            context = \"I was created by Piyush.\"\n",
+    "            say(context)\n",
+    "            return\n",
+    "        elif \"what's your age\" in input or \"how old are you\" in input or \"age\" in input:\n",
+    "            x = 0\n",
+    "            d=datetime.datetime.today()\n",
+    "            m=d.month\n",
+    "            n = m-3\n",
+    "            x += n\n",
+    "            context=\"I am \" + str(x) + \" months old\"\n",
+    "            say(context)\n",
+    "            return\n",
     "        elif 'search' in query or 'web' in query or 'on browser' in query:\n",
-    "            web(query)\n",
+    "            search_web(query)\n",
     "        elif 'app' in query or 'check' in query or 'browser' in query or 'application' in query or 'open' in query: # Can only check browsers\n",
     "            apps(query) \n",
     "        elif 'help' in query or 'can you do' in query or 'abilities' in query:\n",
@@ -453,119 +467,49 @@
     "            storage()\n",
     "        elif \"note\" in query:\n",
     "            make_notes()\n",
+    "        elif \"time\" in input:\n",
+    "            t=datetime.datetime.now()\n",
+    "            context=\"The time is\" + str(t)\n",
+    "            say(context)\n",
+    "            return\n",
+    "        elif \"date\" in input:\n",
+    "            d=datetime.datetime.today()\n",
+    "            speak=\"today is \" + str(d)\n",
+    "            say(speak)\n",
+    "            return\n",
+    "        elif \"calculate\" in input.lower(): \n",
+    "            app_id = \"wa_APP_ID\"\n",
+    "            client = wa.Client(app_id) \n",
+    "            indx = input.lower().split().index('calculate') \n",
+    "            query = input.split()[indx + 1:] \n",
+    "            res = client.query(' '.join(query))\n",
+    "            answer = next(res.results).text\n",
+    "            say(\"The answer is \" + answer)\n",
+    "            return\n",
+    "        elif 'email' in input:\n",
+    "            try:\n",
+    "                say(\"What should I say?\")\n",
+    "                content =str(user()).lower\n",
+    "                to = \"@gmail.com\"\n",
+    "                sendEmail(to, content)\n",
+    "                say(\"Email has been sent!\")\n",
+    "            except Exception as e:\n",
+    "                print(e)\n",
+    "                say(\"Sorry sir. I am not able to send this email\")\n",
+    "        elif wikipedia in input:\n",
+    "            wiki(input.lower())\n",
+    "            return\n",
     "        elif 'bye' in query or 'by' in query:\n",
     "            say('Bye sir. have a nice day')\n",
-    "            break\n",
-    "\n",
-    "def process_text(input): \n",
-    "\ttry: \n",
-    "\t\tif 'search' in input or 'play' in input: \n",
-    "\t\t\t# a basic web crawler using selenium \n",
-    "\t\t\tsearch_web(input) \n",
-    "\t\t\treturn\n",
-    "\n",
-    "\t\telif \"who are you\" in input or \"define yourself\" in input or \"tell me something about you\" in  input: \n",
-    "\t\t\tKavya()\n",
-    "\t\t\treturn\n",
-    "\n",
-    "\t\telif \"who made you\" in input or \"created you\" in input: \n",
-    "\t\t\tspeak = \"I was created by Piyush.\"\n",
-    "\t\t\tsay(speak) \n",
-    "\t\t\treturn\n",
-    "\t\t\n",
-    "\t\telif \"what's your age\" in input or \"how old are you\" in input or \"age\" in input:\n",
-    "\t\t\tx = 0\n",
-    "\t\t\td=datetime.datetime.today()\n",
-    "\t\t\tm=d.month\n",
-    "\t\t\tn = m-3\n",
-    "\t\t\tx += n\n",
-    "\t\t\tspeak=\"I am \" + str(x) + \" months old\"\n",
-    "\t\t\tsay(speak)\n",
-    "\t\t\treturn\n",
-    "\t\t\n",
-    "\t\t    \n",
-    "\t\t   \n",
-    "\t\telif \"time\" in input:\n",
-    "\t\t\tt=datetime.datetime.now()\n",
-    "\t\t\tspeak=\"The time is\" + str(t)\n",
-    "\t\t\tsay(speak)\n",
-    "\t\t\treturn\n",
-    "\n",
-    "\t\telif \"date\" in input:\n",
-    "\t\t\td=datetime.datetime.today()\n",
-    "\t\t\tspeak=\"today is \" + str(d)\n",
-    "\t\t\tsay(speak)\n",
-    "\t\t\treturn\n",
-    "\n",
-    "\t\telif \"calculate\" in input.lower(): \n",
-    "\t\t\t\n",
-    "\t\t\t# write your wa app_id here \n",
-    "\t\t\tapp_id = \"wa_APP_ID\"\n",
-    "\t\t\tclient = wa.Client(app_id) \n",
-    "\n",
-    "\t\t\tindx = input.lower().split().index('calculate') \n",
-    "\t\t\tquery = input.split()[indx + 1:] \n",
-    "\t\t\tres = client.query(' '.join(query)) \n",
-    "\t\t\tanswer = next(res.results).text \n",
-    "\t\t\tsay(\"The answer is \" + answer) \n",
-    "\t\t\treturn\n",
-    "\n",
-    "\t\telif 'open' in input: \n",
-    "\t\t\t\n",
-    "\t\t\t# another function to open \n",
-    "\t\t\t# different application availaible \n",
-    "\t\t\tapps(input.lower()) \n",
-    "\t\t\treturn\n",
-    "\n",
-    "\t\t#elif 'what is' or 'what are' or 'when'\n",
-    "\t\t'''\n",
-    "\t\telif 'email' in input:\n",
-    "\t\t\t\ttry:\n",
-    "\t\t\t\t\t  say(\"What should I say?\")\n",
-    "\t\t\t\t\t  content =str(user()).lower\n",
-    "\t\t\t\t\t  to = \"@gmail.com\"    \n",
-    "\t\t\t\t\t  sendEmail(to, content)\n",
-    "\t\t\t\t\t  say(\"Email has been sent!\")\n",
-    "\t\t\t\texcept Exception as e:\n",
-    "\t\t\t\t\t  print(e)\n",
-    "\t\t\t\t\t  say(\"Sorry sir. I am not able to send this email\")\n",
-    "\t\t''elif wikipedia in input:\n",
-    "\t\t\twiki(input.lower())\n",
-    "\t\t\treturn'''\n",
-    "\n",
-    "\n",
-    "\texcept : \n",
-    "\t\tsay(\"I don't understand, can you speak again\") \n",
-    "\t\tans = str(user()).lower\n",
-    "\t\tif 'yes' in str(ans) or 'yeah' in str(ans) or \"sure\" in str(ans): \n",
-    "\t\t\tprocess_text(ans) \n",
-    "\n",
-    "\n",
-    "def loop():\n",
-    "\t\twhile(1): \n",
-    "\n",
-    "\t\t\ttext = str(user()).lower() \n",
-    "\n",
-    "\t\t\tif text == 0: \n",
-    "\t\t\t\tcontinue\n",
-    "\t\t\tprocess_text(text)\n",
-    "\t\t\ttry:\n",
-    "\t\t\t\tif \"exit\" in str(text) or \"bye\" in str(text) or \"sleep\" in str(text): \n",
-    "\t\t\t\t\tsay(\"Ok bye, sir. Take care.\")\n",
-    "\t\t\t\t\tbreak\n",
-    "\t\t\texcept:\n",
-    "\t\t\t\tsay(\"Anything else sir\")\n",
-    "\t\t\t\tresponse = str(user()).lower\n",
-    "\t\t\t\tif response == 'yes' or response == 'yeah' or response == 'yo':\n",
-    "\t\t\t\t\tsay('Yes sir')\n",
-    "\t\t\t\t\tname = user()\n",
-    "\t\t\t\t\ttext = str(user()).lower()\n",
-    "\t\t\t\t\tprocess_text(text)\n",
-    "\t\t\t\telse:\n",
-    "\t\t\t\t\tsay(\"Ok bye, sir.\")\n",
-    "\t\t\t\t\tsay(\"Take care.\")\n",
-    "\t\t\t\t\tbreak\n"
+    "            break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
