--- a/KRYPTON.ipynb
+++ b/KRYPTON.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import cv2\n",
     "import time\n",
     "import random\n",
     "import urllib\n",
@@ -37,7 +38,8 @@
     "c = setup.cursor()\n",
     "app_id = \"TYAY5W-RP68QXQ496\"\n",
     "client = wa.Client(app_id)\n",
-    "r = sr.Recognizer()"
+    "r = sr.Recognizer()\n",
+    "capture = cv2.VideoCapture(0)"
    ]
   },
   {
@@ -115,6 +117,16 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not capture.isOpened():\n",
+    "    say(\"Oops! No camera found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,19 +423,34 @@
     "    server = smtplib.SMTP('smtp.gmail.com', 587)\n",
     "    server.ehlo()\n",
     "    server.starttls()\n",
-    "    server.login('ynr24piyush@gmail.com', 'vpSP4#chd@ynr')\n",
+    "    server.login('ynr24piyush@gmail.com', 'vpsP4#chd@ynr')\n",
     "    server.sendmail('ynr24piyush@gmail.com', to, content)\n",
-    "    server.close()"
+    "    server.close()\n",
+    "    \n",
+    "def config():\n",
+    "    while True:\n",
+    "        ret, frame = capture.read()\n",
+    "        if not ret:\n",
+    "            say(\"No frame detected\")\n",
+    "            break\n",
+    "        say(\"Welcome back Mr. Piyush\")\n",
+    "        # cv2.imshow(\"Camera\", frame) # If needed to show the image on screen\n",
+    "        \n",
+    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "    capture.release()\n",
+    "    cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def features():\n",
     "    while True:\n",
+    "        config()\n",
     "        query = user().lower()\n",
     "        if 'time' in query or 'date' in query or 'day' in query or 'month' in query or 'year' in query: # done\n",
     "            clock(query)\n",
@@ -488,7 +515,7 @@
     "            return\n",
     "        elif 'email' in input:\n",
     "            try:\n",
-    "                say(\"What should I say?\")\n",
+    "                say(\"What should I write?\")\n",
     "                content =str(user()).lower\n",
     "                to = \"@gmail.com\"\n",
     "                sendEmail(to, content)\n",
